[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "healthcare-ai-governance-mcp"
version = "1.0.0"
description = "MEOK AI Labs — healthcare-ai-governance-mcp MCP Server"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/healthcare-ai-governance-mcp"
